--- a/index.html
+++ b/index.html
@@ -84,28 +84,9 @@
                                             </a>
                                             <ul class="nav navbar-nav menu-bar">
                                                 <li class=dropdown>
-                                                    <a href=# class=active>Home</a>
-                                                    <ul class=submenu>
-                                                        <li>
-                                                            <a href=homepage1.html>Multipage</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage5.html>Multipage Event counter</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage6.html>Multipage Video</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage2.html>One Page</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage3.html>One Page Video</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage4.html>One Page Event counter</a>
-                                                        </li>
-                                                    </ul>
+                                                    <a href=index.html class=active>Home</a>
                                                 </li>
+
                                                 <li>
                                                     <a href=aboutus.html>about us</a>
                                                 </li>
