--- a/gallery.html
+++ b/gallery.html
@@ -73,56 +73,25 @@
                                             </a>
                                             <ul class="nav navbar-nav menu-bar">
                                                 <li class=dropdown>
-                                                    <a href=#>Home</a>
-                                                    <ul class=submenu>
-                                                        <li>
-                                                            <a href=homepage1.html>Multipage</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage5.html>Multipage Event counter</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage6.html>Multipage Video</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage2.html>One Page</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage3.html>One Page Video</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=homepage4.html>One Page Event counter</a>
-                                                        </li>
-                                                    </ul>
+                                                    <a href=index.html class=active>Home</a>
                                                 </li>
+
                                                 <li>
-                                                    <a href=aboutus.html>about us</a>
+                                                    <a href=about.html>about us</a>
                                                 </li>
                                                 <li>
                                                     <a href=sermons.html>sermons</a>
                                                 </li>
-                                                <li class=dropdown>
-                                                    <a>events</a>
-                                                    <ul class=submenu>
-                                                        <li>
-                                                            <a href=event.html>event type01</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href=event02.html>event type02</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
                                                 <li>
-                                                    <a href=gallery.html class=active>gallery</a>
+                                                    <a href=events.html>Events</a>
                                                 </li>
+                                               
                                                 <li>
-                                                    <a href=blog.html>blog</a>
+                                                    <a href=gallery.html>gallery</a>
                                                 </li>
+
                                                 <li>
-                                                    <a href=contact_us.html>contact us</a>
-                                                </li>
-                                                <li>
-                                                    <a href=store.html>store</a>
+                                                    <a href=contact.html>contact us</a>
                                                 </li>
                                                 <li>
                                                     <a href=# class=search-box-tablet>
@@ -331,9 +300,9 @@
                     <div class=row>
                         <div class="row left">
                             <div class=why>
-                                <h4>Why this theme?</h4>
+                                <h4>Why us?</h4>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                                <a href=# class="btn trans-btn">BUY NOW</a>
+                                <a href=# class="btn trans-btn">READ MORE</a>
                             </div>
                             <div class=pages>
                                 <h4>Pages</h4>
@@ -360,11 +329,11 @@
                             <div class=contact>
                                 <h4>Contact us</h4>
                                 <p>
-                                    AJ - 325,<br>
-                                    SEC - 2, SALTLAKE,<br>KOLKATA - 700091
+                                    Block - 325,<br>
+                                    Ireda, Lira City<br>Uganda
                                 </p>
                                 <p>
-                                    Phone: 0202 00 2365<br>Mail: cross@church.com
+                                    Phone: +256777854154<br>Mail: saints@harvest.com
                                 </p>
                             </div>
                             <div class=recent>
@@ -377,7 +346,7 @@
                                         <h5 class=heading>
                                             <a href=#>Jesus is the Ture Vine</a>
                                         </h5>
-                                        <h5 class=date>April 10, 2015</h5>
+                                        <h5 class=date>April 10, 2023</h5>
                                         <p>Lorem Ipsum is simply dummy</p>
                                     </div>
                                 </div>
@@ -389,7 +358,7 @@
                                         <h5 class=heading>
                                             <a href=#>Jesus is the Ture Vine</a>
                                         </h5>
-                                        <h5 class=date>April 10, 2015</h5>
+                                        <h5 class=date>April 10, 2023</h5>
                                         <p>Lorem Ipsum is simply dummy</p>
                                     </div>
                                 </div>
@@ -397,9 +366,9 @@
                         </div>
                     </div>
                     <h6>
-                        &copy;2015 Cross. Powered by 
-                        <a href=#>
-                            <span>Itobuz.com</span>
+                        &copy;2023 Developed by 
+                        <a href="https://www.kakebe.com" target=_blank>
+                            <span>KaKebe Technologies</span>
                         </a>
                     </h6>
                 </div>
