--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                             <div>
                                 <div class=figure>
                                     <div class=fig>
-                                        <img src=images/content/staff1.jpg alt=image>
+                                        <img src=images/content/staff1.jpeg alt=image>
                                     </div>
                                     <div class=figcaption>
                                         <div class="header clearfix">
