--- a/index.html
+++ b/index.html
@@ -188,8 +188,16 @@
                             <h3>
                                 Welcome to <span>Saints Harvest Ministries</span>
                             </h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words.</p>
+                            <p>Saints Harvest Church is a Community of believers fulfilling the great
+                                commission according to Mathew 28:16-20: ‘all authority in heaven and on
+                                earth has been given to me. Therefore, go ye and make disciples of all
+                                Nations, baptising them in the name of the Father, Son and the Holy Spirit
+                                and teaching them to obey everything I have commanded you. And surely I
+                                am with you always, to the very end of the age’. Jesus said ‘the harvest is
+                                plentiful but the workers are few. </p>
+                            <p> Jesus said ‘the harvest is
+                                plentiful but the workers are few. Ask the Lord of the harvest, therefore to
+                                send out workers into His harvest field’ Luke 10: 2.</p>
                             <a href=# class=red-readmore>read more</a>
                         </div>
                     </div>
