--- a/index.html
+++ b/index.html
@@ -217,7 +217,11 @@
                                     </div>
                                     <div class=item-container>
                                         <h4 class=headline-lato>What we do?</h4>
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                                        <p>Preaching the word of God, Discipleship,
+                                            Praying for the sick,
+                                            Spiritual and humanitarian Support to the vulnerable community ie 
+                                            Street children,
+                                            Promoting talents e.g. Christian Music, dance and drama.</p>
                                         <a href=# class=red-readmore>read more</a>
                                     </div>
                                 </div>
@@ -229,7 +233,8 @@
                                     </div>
                                     <div class=item-container>
                                         <h4 class=headline-lato>Our Mission & Vision</h4>
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                                        <p>To Evangelise, Love and Equip Christ Disciples <br> To raise a generation who are God fearing, productive and empowered to
+                                            impact the Community and the world.</p>
                                         <a href=# class=red-readmore>read more</a>
                                     </div>
                                 </div>
