--- a/about.html
+++ b/about.html
@@ -208,7 +208,34 @@
                             <div>
                                 <div class=figure>
                                     <div class=fig>
-                                        <img src=images/content/staff1.jpeg alt=image>
+                                        <img src=images/content/staff1.png alt=image>
+                                    </div>
+                                    <div class=figcaption>
+                                        <div class="header clearfix">
+                                            <div class=heading>
+                                                <h4>
+                                                    <a href=# class=headline-lato>Ps. Susan Aguma</a>
+                                                </h4>
+                                                <span>Pastor</span>
+                                            </div>
+                                            <div class=heading>
+                                                <a href=#>
+                                                    <i class="fa fa-facebook"></i>
+                                                </a>
+                                                <a href=#>
+                                                    <i class="fa fa-twitter"></i>
+                                                </a>
+                                                <a href=#>
+                                                    <i class="fa fa-youtube"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <p class=paragraph_opensans>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis</p>
+                                    </div>
+                                </div>
+                                <div class=figure>
+                                    <div class=fig>
+                                        <img src=images/content/staff1.png alt=image>
                                     </div>
                                     <div class=figcaption>
                                         <div class="header clearfix">
@@ -235,42 +262,15 @@
                                 </div>
                                 <div class=figure>
                                     <div class=fig>
-                                        <img src=images/content/staff2.jpg alt=image>
+                                        <img src=images/content/staff1.png alt=image>
                                     </div>
                                     <div class=figcaption>
                                         <div class="header clearfix">
                                             <div class=heading>
                                                 <h4>
-                                                    <a href=# class=headline-lato>Riley Wilson</a>
+                                                    <a href=# class=headline-lato>Ps. Basil Aguma</a>
                                                 </h4>
-                                                <span>priest</span>
-                                            </div>
-                                            <div class=heading>
-                                                <a href=#>
-                                                    <i class="fa fa-facebook"></i>
-                                                </a>
-                                                <a href=#>
-                                                    <i class="fa fa-twitter"></i>
-                                                </a>
-                                                <a href=#>
-                                                    <i class="fa fa-youtube"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <p class=paragraph_opensans>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis</p>
-                                    </div>
-                                </div>
-                                <div class=figure>
-                                    <div class=fig>
-                                        <img src=images/content/staff3.jpg alt=image>
-                                    </div>
-                                    <div class=figcaption>
-                                        <div class="header clearfix">
-                                            <div class=heading>
-                                                <h4>
-                                                    <a href=# class=headline-lato>Riley Wilson</a>
-                                                </h4>
-                                                <span>priest</span>
+                                                <span>Senior Pastor</span>
                                             </div>
                                             <div class=heading>
                                                 <a href=#>
