--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset=utf-8>
         <meta name=description>
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <title>cross</title>
+        <title>Saint Harvest</title>
         <link rel=stylesheet href=styles/vendor.css>
         <link rel=stylesheet href=styles/main.css>
         <script src=scripts/vendor/modernizr.js></script>
@@ -23,13 +23,13 @@
         <div class=wrapper-body>
             <div class=slider>
                 <div class=image-slider>
-                    <img src=images/background/header_background.jpg alt=image>
+                    <img src=images/background/back.png alt=image>
                 </div>
                 <div class=image-slider>
-                    <img src=images/background/cross_banner01.jpg alt=image>
+                    <img src=images/background/back.png alt=image>
                 </div>
                 <div class=image-slider>
-                    <img src=images/background/cross_banner02.jpg alt=image>
+                    <img src=images/background/back.png alt=image>
                 </div>
             </div>
             <header>
@@ -124,10 +124,10 @@
                             <div class=header-top-right>
                                 <h2>
                                     SAINTS HARVEST MINISTRIES <br>
-                                    <span>The character of christ</span>
+                                    <span>Evangelise, Love and Equip Christ Disciples</span>
                                 </h2>
                                 <p>
-                                    Nulla consequat massa quis enim. Donec pede justo,ringilla vel,<br>aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae.
+                                    <br>
                                 </p>
                                 <a href=# class="btn red-btn">join us</a>
                             </div>
@@ -245,8 +245,15 @@
                                         <img src=images/about/item3.jpg alt=image>
                                     </div>
                                     <div class=item-container>
-                                        <h4 class=headline-lato>Our history</h4>
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                                        <h4 class=headline-lato>Core Values</h4>
+                                        <p>The word of God,
+                                            God’s people.
+                                            Relationship with God.
+                                            God’s resources.
+                                            Mentoring the next generation,
+                                            Excellence,
+                                            The character of Christ, and 
+                                            Speaking the truth in love.</p>
                                         <a href=# class=red-readmore>read more</a>
                                     </div>
                                 </div>
@@ -532,7 +539,7 @@
                         <div class="figure-wrapper clearfix">
                             <div class="item-holder clearfix">
                                 <div class=item-fig>
-                                    <img src=images/content/donation1.jpg alt=image>
+                                    <img src=images/content/kids.png alt=image>
                                     <a href=# class="btn btn-white">Donate now</a>
                                 </div>
                                 <div class=item-content>
