--- a/sermons.html
+++ b/sermons.html
@@ -4,7 +4,7 @@
         <meta charset=utf-8>
         <meta name=description>
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <title>cross</title>
+        <title>Saint Harvest</title>
         <link rel=stylesheet href=styles/vendor.css>
         <link rel=stylesheet href=styles/main.css>
         <script src=scripts/vendor/modernizr.js></script>
