--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                     <a href="#0"><i class="fab fa-pinterest-p"></i></a>
                 </div>
 
-                <p><a target="_blank" href="https://templateshub.net">Templates Hub</a></p>
+                <p><a target="_blank" href="https://kakebe.com">KaKebe</a></p>
             </div>
 
             <div class="curve curve-top curve-center"></div>
