--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@
                                 </div>
                             </div>
                             <div class="info">
-                                <h6>Alex Smith</h6>
-                                <span>Project Manager</span>
+                                <h6>Pastor Bazil</h6>
+                                <span>Senior Pastor</span>
                             </div>
                         </div>
                     
