--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                                 </div>
                             </div>
                             <div class="info">
-                                <h6>Pastor Bazil</h6>
+                                <h6>il</h6>
                                 <span>Senior Pastor</span>
                             </div>
                         </div>
@@ -743,7 +743,7 @@
                 <div class="row">
 
                     <div class="section-head offset-md-2 col-md-8 offset-lg-3 col-lg-6">
-                        <h4>What's <span>Clients</span> Says?</h4>
+                        <h4>Samons</h4>
                         <p>We are a passionate digital design agency that specializes in beautiful and easy-to-use digital design & web development services.</p>
                     </div>
 
