--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
                     <a class="nav-link" href="#" data-scroll-nav="3">Team</a>
                   </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#" data-scroll-nav="4">Price</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#" data-scroll-nav="5">Blog</a>
+			        <a class="nav-link" href="#" data-scroll-nav="5">Events</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="#" data-scroll-nav="6">Contact</a>
