--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                         <a href="#0" class="butn butn-light mt-30">
-                            <span>Get Started</span>
+                            <span>Welcome</span>
                         </a>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <a href="#0" class="butn butn-light mt-30">
-                            <span>Get Started</span>
+                            <span>Welcome</span>
                         </a>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <a href="#0" class="butn butn-light mt-30">
-                            <span>Get Started</span>
+                            <span>Welcome</span>
                         </a>
                     </div>
                 </div>
@@ -169,17 +169,17 @@
                             <div class="text-center">
                                 <span class="icon icon-basic-anchor"></span>
                                 <h5>Ways of Christ</h5>
-                                <h6>Modern & Clean Design</h6>
-                                <p>Lorem Ipsum is simply dummy text of the printing and type setting industry</p>
+                                <h6>Love unconditionally</h6>
+                                <p>Show compassion, forgive freely, seek justice, serve selflessly, pray fervently, live humbly, speak truth, and walk in faith. Reflect His grace.</p>
                             </div>
                         </div>
 
                         <div class="feat-item active mb-md50 col-lg-4">
                             <div class="text-center">
                                 <span class="icon icon-basic-pencil-ruler"></span>
-                                <h5>Fellowshiping</h5>
-                                <h6>Web & Mobile Development</h6>
-                                <p>Lorem Ipsum is simply dummy text of the printing and type setting industry</p>
+                                <h5>Fellowship</h5>
+                                <h6>A bond of shared faith, love, and communityt</h6>
+                                <p>It cultivates connection, support, and encouragement, fostering growth and unity among believers. A source of strength and joy.</p>
                             </div>
                         </div>
 
@@ -187,8 +187,8 @@
                             <div class="text-center">
                                 <span class="icon icon-basic-cards-diamonds"></span>
                                 <h5>Christianity</h5>
-                                <h6>Logo & Motion Design</h6>
-                                <p>Lorem Ipsum is simply dummy text of the printing and type setting industry</p>
+                                <h6>Faith on Jesus Christ</h6>
+                                <p>Embracing His teachings of love, forgiveness, and redemption. It offers hope, guidance, eternal life through faith and relationship with God.</p>
                             </div>
                         </div>
 
