--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items graphic">
                             <div class="item-img">
-                                <img src="img/portfolio/1.jpg" alt="image">
+                                <img src="img/portfolio/1.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Fellowship | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/1.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -451,11 +451,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items web">
                             <div class="item-img">
-                                <img src="img/portfolio/2.jpg" alt="image">
+                                <img src="img/portfolio/3.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Outreach | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/2.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -467,11 +467,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items brand">
                             <div class="item-img">
-                                <img src="img/portfolio/3.jpg" alt="image">
+                                <img src="img/portfolio/2.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Church | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/3.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -483,11 +483,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items graphic">
                             <div class="item-img">
-                                <img src="img/portfolio/4.jpg" alt="image">
+                                <img src="img/portfolio/1.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Fellowship | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/4.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -499,11 +499,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items web">
                             <div class="item-img">
-                                <img src="img/portfolio/5.jpg" alt="image">
+                                <img src="img/portfolio/3.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Outreach | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/5.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -515,11 +515,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items brand">
                             <div class="item-img">
-                                <img src="img/portfolio/6.jpg" alt="image">
+                                <img src="img/portfolio/2.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Church | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/6.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -531,11 +531,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items brand">
                             <div class="item-img">
-                                <img src="img/portfolio/7.jpg" alt="image">
+                                <img src="img/portfolio/2.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Church | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/7.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -547,11 +547,11 @@
                         <!-- gallery item -->
                         <div class="col-lg-3 col-md-6 items graphic">
                             <div class="item-img">
-                                <img src="img/portfolio/8.jpg" alt="image">
+                                <img src="img/portfolio/1.png" alt="image">
                                 <div class="item-img-overlay">
                                     <div class="overlay-info full-width">
-                                        <p>Logo | Branding</p>
-                                        <h6>Creative Web Design</h6>
+                                        <p>Fellowship | Moments</p>
+                                        <h6>Saint Harvest Ministries</h6>
                                         <a href="img/portfolio/8.jpg" class="popimg">
                                             <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                         </a>
@@ -867,7 +867,7 @@
                             <div class="cont">
                                 <div class="info">
                                     <a href="#0">By : Admin</a>
-                                    <a href="#0">06 Aug 2017</a>
+                                    <a href="#0">06 Aug 2023</a>
                                     <a href="#0" class="tag">WordPress</a>
                                 </div>
                                 <h6><a href="#0">Church Website Launch</a></h6>
@@ -887,7 +887,7 @@
                             <div class="cont">
                                 <div class="info">
                                     <a href="#0">By : Admin</a>
-                                    <a href="#0">06 Aug 2017</a>
+                                    <a href="#0">06 Aug 2023</a>
                                     <a href="#0" class="tag">WordPress</a>
                                 </div>
                                 <h6><a href="#0">Church Website Launch</a></h6>
@@ -907,10 +907,10 @@
                             <div class="cont">
                                 <div class="info">
                                     <a href="#0">By : Admin</a>
-                                    <a href="#0">06 Aug 2017</a>
+                                    <a href="#0">06 Aug 2023</a>
                                     <a href="#0" class="tag">WordPress</a>
                                 </div>
-                                <h6><a href="#0">Church Website Launch/a></h6>
+                                <h6><a href="#0">Church Website Launch</a></h6>
                                 <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the dummy text ever</p>
                                 <a href="#0" class="more">Read More <i class="fas fa-chevron-right"></i></a>
                             </div>
