--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 
 <head>
 
+
+    <meta property="og:title" content="Saint Harvest | Ministries">
+    <meta property="og:description" content="We are a passionate about transforming lives through the word os the Lord. We belive in the God in heaven for he died for our sins.!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://saintharvest.netlify.app/">
+    <meta property="og:image" content="img/bg66.jpeg">
+
     	<!-- Metas -->
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
